# gamelift-pb

./: .eslintrc.js  .gitignore  .mocharc.js  .travis.yml  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
lib/: accept-player-session.ts  activate-game-session.ts  attribute-value.ts  backfill-matchmaking-request.ts  backfill-matchmaking-response.ts  describe-player-sessions-request.ts  describe-player-sessions-response.ts  game-property.ts  game-session-activate.ts  game-session-terminate.ts  game-session.ts  gamelift-response.ts  get-instance-certificate-response.ts  get-instance-certificate.ts  index.ts  namespace.ts  player-session.ts  player.ts  process-ending.ts  process-ready.ts  remove-player-session.ts  report-health.ts  stop-matchmaking-request.ts  terminate-process.ts  update-game-session.ts  update-player-session-creation-policy.ts
terraform/: main.tf
tests/: wire-test.ts
tests/include/: populate.hh  utility.hh
tests/src/: wire-test.cc
